--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            text-align: center;
         }
         header {
             background-color: #3498db;
             color: white;
-            text-align: center;
             padding: 1em 0;
         }
         .container {
@@ -22,7 +22,7 @@
             padding: 2em;
         }
         h1 {
-            color: white; /* Updated company name color */
+            color: white;
         }
         p {
             margin-bottom: 1.5em;
@@ -31,10 +31,20 @@
             color: #3498db;
             text-decoration: none;
         }
+        .download-button {
+            display: inline-block;
+            background-color: #3498db;
+            color: white;
+            padding: 0.5em 1em;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+            text-decoration: none;
+        }
         footer {
             background-color: #f5f5f5;
             padding: 1em 0;
-            text-align: center;
         }
     </style>
 </head>
@@ -45,7 +55,7 @@
     <div class="container">
         <h2>My OTP Authenticator App - 2FA</h2>
         <p>A leading free app designed for two-factor authentication (2FA) or 2-step verification. Safeguard your logins, passwords, and personal data from hackers with ease!</p>
-        <p>Download the app on <a href="https://play.google.com/store/apps/details?id=otp.authenticator.app.authenticaton.password" target="_blank">Google Play</a></p>
+        <a class="download-button" href="https://play.google.com/store/apps/details?id=otp.authenticator.app.authenticaton.password" target="_blank">Download Android Version</a>
         <p>Contact us at <a href="mailto:bravkidd@outlook.com">bravkidd@outlook.com</a></p>
     </div>
     <footer>
