--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
         <h2>My OTP Authenticator App - 2FA</h2>
         <p>A leading free app designed for two-factor authentication (2FA) or 2-step verification. Safeguard your logins, passwords, and personal data from hackers with ease!</p>
-        <a class="download-button" href="https://play.google.com/store/apps/details?id=otp.authenticator.app.authenticaton.password" target="_blank">Download Android Version</a>
+        <a class="download-button" href="https://play.google.com/store/apps/details?id=otp.authenticator.app.authentication.password" target="_blank">Download Android Version</a>
         <p>Contact us at <a href="mailto:bravkidd@outlook.com">bravkidd@outlook.com</a></p>
     </div>
     <footer>
