--- a/Privacy.html
+++ b/Privacy.html
@@ -11,10 +11,10 @@
         Privacy Policy
     </div>
     <div class="time">
-        Effective date: August 12, 2023
+        Effective date: April 26, 2024
     </div>
     <div class="content">
-        Thank you for choosing "Authenticator App - 2FA | MFA" (the "App"). This Privacy Policy describes how your personal information is collected, used, and shared when you use our App.
+        Thank you for choosing our apps "Authenticator App: 2FA | MFA" and "Authenticator App - 2FA"  (the "Apps"). This Privacy Policy describes how your personal information is collected, used, and shared when you use our Apps.
     </div>
     <div class="detail">
         <h3 class="supTitle">
@@ -22,10 +22,10 @@
             Information We Collect
         </h3>
         <p class="session">
-            <strong>1. Advertising IDs: </strong>The App may use third-party services like Google, Facebook, and Applovin to serve personalized ads. These services may collect your advertising ID, which is a unique identifier associated with your device. The advertising ID is used for ad targeting and performance analysis. Please refer to the privacy policies of these third-party services to understand how they handle your data.
+            <strong>1. Advertising IDs: </strong>The Apps may use third-party services like Google, Facebook, and Applovin to serve personalized ads. These services may collect your advertising ID, which is a unique identifier associated with your device. The advertising ID is used for ad targeting and performance analysis. Please refer to the privacy policies of these third-party services to understand how they handle your data.
         </p>
         <p class="session">
-            <strong>2. Log Data: </strong>We may collect certain log data automatically when you use the App. This information may include your device's Internet Protocol (IP) address, device type, operating system version, and usage data such as the features you interact with and the time spent on the App. This data is collected for the purpose of analyzing the app's performance and improving its functionality.
+            <strong>2. Log Data: </strong>We may collect certain log data automatically when you use the Apps. This information may include your device's Internet Protocol (IP) address, device type, operating system version, and usage data such as the features you interact with and the time spent on the App. This data is collected for the purpose of analyzing the app's performance and improving its functionality.
         </p>
         <h3 class="supTitle">
             <br>
@@ -39,7 +39,7 @@
             Third-Party Services
         </h3>
         <p class="session">
-            The App may use third-party services that have their privacy policies. These third-party services may collect information used to identify you. Please review their privacy policies to understand how your data is handled by them.
+            The Apps may use third-party services that have their privacy policies. These third-party services may collect information used to identify you. Please review their privacy policies to understand how your data is handled by them.
         </p>
         <h3 class="supTitle">
             <br>
