--- a/Privacy.html
+++ b/Privacy.html
@@ -25,14 +25,14 @@
             <strong>1. Advertising IDs: </strong>The Apps may use third-party services like Google, Facebook, and Applovin to serve personalized ads. These services may collect your advertising ID, which is a unique identifier associated with your device. The advertising ID is used for ad targeting and performance analysis. Please refer to the privacy policies of these third-party services to understand how they handle your data.
         </p>
         <p class="session">
-            <strong>2. Log Data: </strong>We may collect certain log data automatically when you use the Apps. This information may include your device's Internet Protocol (IP) address, device type, operating system version, and usage data such as the features you interact with and the time spent on the App. This data is collected for the purpose of analyzing the app's performance and improving its functionality.
+            <strong>2. Log Data: </strong>We may collect certain log data automatically when you use the Apps. This information may include your device's Internet Protocol (IP) address, device type, operating system version, and usage data such as the features you interact with and the time spent on the Apps. This data is collected for the purpose of analyzing the Apps' performance and improving its functionality.
         </p>
         <h3 class="supTitle">
             <br>
             How We Use Your Information
         </h3>
         <p class="session">
-            The information collected through advertising IDs is used for targeted advertising to enhance your experience with relevant ads. Log data is used to analyze user behavior, identify app issues, and improve the overall performance and user experience of the App. We do not share your personal information with third parties, except as described in this Privacy Policy.
+            The information collected through advertising IDs is used for targeted advertising to enhance your experience with relevant ads. Log data is used to analyze user behavior, identify app issues, and improve the overall performance and user experience of the Apps. We do not share your personal information with third parties, except as described in this Privacy Policy.
         </p>
         <h3 class="supTitle">
             <br>
