Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -11,10 +11,10 @@
         Terms of Service
     </div>
     <div class="time">
-        Effective date: August 15, 2023
+        Effective date: April 26, 2024
     </div>
     <div class="content">
-        By downloading, installing, or using "Authenticator App - 2FA | MFA" (the "App"), you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, please do not use the App.
+        By downloading, installing, or using either "Authenticator App: 2FA | MFA" or "Authenticator App - 2FA"  (the "App"), you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, please do not use any of the App.
     </div>
     <div class="detail">
         <h3 class="supTitle">
@@ -22,7 +22,7 @@
             1. Use of the App
         </h3>
         <p class="session">
-            The App is provided solely for the purpose of enabling two-factor authentication (2FA) using one-time passwords (OTP) and related security features. You agree not to use the App for any unlawful, unauthorized, or inappropriate purposes.
+            the App are provided solely for the purpose of enabling two-factor authentication (2FA) using one-time passwords (OTP) and related security features. You agree not to use the App for any unlawful, unauthorized, or inappropriate purposes.
         </p>
         <h3 class="supTitle">
             <br>
@@ -44,21 +44,21 @@
             3. Intellectual Property
         </h3>
         <p class="session">
-            The App, including all its content and features, is protected by intellectual property rights and is owned or licensed by us. You agree not to reproduce, modify, distribute, or create derivative works based on the App without our prior written consent.
+            the App, including all its content and features, are protected by intellectual property rights and is owned or licensed by us. You agree not to reproduce, modify, distribute, or create derivative works based on the App without our prior written consent.
         </p>
         <h3 class="supTitle">
             <br>
             4. Third-Party Services
         </h3>
         <p class="session">
-            The App may integrate with third-party services for advertising, analytics, and other purposes. Your use of such third-party services is subject to their respective terms and privacy policies. We are not responsible for any actions or data handling practices of third-party services.
+            the App may integrate with third-party services for advertising, analytics, and other purposes. Your use of such third-party services is subject to their respective terms and privacy policies. We are not responsible for any actions or data handling practices of third-party services.
         </p>
         <h3 class="supTitle">
             <br>
             5. Limitation of Liability
         </h3>
         <p class="session">
-            The App is provided on an "as-is" basis, and we make no warranties or representations regarding its performance, reliability, or suitability for your intended use. We shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from or related to your use of the App.
+            the App are provided on an "as-is" basis, and we make no warranties or representations regarding its performance, reliability, or suitability for your intended use. We shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from or related to your use of the App.
         </p>
         <h3 class="supTitle">
             <br>
