Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -14,7 +14,7 @@
         Effective date: April 26, 2024
     </div>
     <div class="content">
-        By downloading, installing, or using either "Authenticator App: 2FA | MFA" or "Authenticator App - 2FA"  (the "App"), you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, please do not use any of the App.
+        By downloading, installing, or using our app, either "Authenticator App: 2FA | MFA" or "Authenticator App - 2FA"  (the "App"), you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, please do not use any of the App.
     </div>
     <div class="detail">
         <h3 class="supTitle">
