Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -22,7 +22,7 @@
             1. Use of the App
         </h3>
         <p class="session">
-            the App are provided solely for the purpose of enabling two-factor authentication (2FA) using one-time passwords (OTP) and related security features. You agree not to use the App for any unlawful, unauthorized, or inappropriate purposes.
+            the App is provided solely for the purpose of enabling two-factor authentication (2FA) using one-time passwords (OTP) and related security features. You agree not to use the App for any unlawful, unauthorized, or inappropriate purposes.
         </p>
         <h3 class="supTitle">
             <br>
@@ -44,7 +44,7 @@
             3. Intellectual Property
         </h3>
         <p class="session">
-            the App, including all its content and features, are protected by intellectual property rights and is owned or licensed by us. You agree not to reproduce, modify, distribute, or create derivative works based on the App without our prior written consent.
+            the App, including all its content and features, is protected by intellectual property rights and is owned or licensed by us. You agree not to reproduce, modify, distribute, or create derivative works based on the App without our prior written consent.
         </p>
         <h3 class="supTitle">
             <br>
@@ -58,7 +58,7 @@
             5. Limitation of Liability
         </h3>
         <p class="session">
-            the App are provided on an "as-is" basis, and we make no warranties or representations regarding its performance, reliability, or suitability for your intended use. We shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from or related to your use of the App.
+            the App is provided on an "as-is" basis, and we make no warranties or representations regarding its performance, reliability, or suitability for your intended use. We shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from or related to your use of the App.
         </p>
         <h3 class="supTitle">
             <br>
