Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -24,6 +24,18 @@
         <p class="session">
             the App is provided solely for the purpose of enabling two-factor authentication (2FA) using one-time passwords (OTP) and related security features. You agree not to use the App for any unlawful, unauthorized, or inappropriate purposes.
         </p>
+        <h4 class="supTitle">
+            <br>
+            1.1 About Subscriptions 
+        </h4>
+        <p class="session">
+            The subscription gives you unlimited access to the App. If you don't cancel before the trial ends, you will be charged monthly or yearly until you cancel. For the lifetime package, you only need to buy once and unlock all contents the App forever.
+        </p>
+        <br>
+        <p class="session">
+            You can manage or cancel your subscriptions by going to GooglePlay -> your personal profile -> Payments & Subscriptions        
+        </p>
+ 
         <h3 class="supTitle">
             <br>
             2. User Responsibilities 
